add_executable(grug2dot
  grug2dot.cpp
  )
target_link_libraries(grug2dot
  resource
  Boost::headers
  Boost::filesystem
  )
add_executable(resource-query
  resource-query.cpp
  command.cpp
  command.hpp
  )
target_link_libraries(resource-query
  resource
  PkgConfig::LIBEDIT
  PkgConfig::JANSSON
  PkgConfig::UUID
  Boost::filesystem
  Boost::headers
  )
add_executable(rq2
  rq2.cpp
  rq2.hpp
  )
target_link_libraries(rq2
  resource
  PkgConfig::LIBEDIT
  )

add_subdirectory(test)

